# humioapi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
humioapi/: __init__.py  api.py  exceptions.py  loadenv.py  logsetup.py  monkeypatch.py  queries.py  queryjob.py  timeseries.py  urllib3_transport.py  utils.py
humiocore/: __init__.py  api.py  loadenv.py  logsetup.py  queryjob.py  timeseries.py  utils.py
